wp-content/themes/ivan-kocka-child/style.css
/* ... */
/* social-media*/
.social-media{
	font-size: 22px;
	line-height: 36px;
}
.social-media a{
	color: #353054 !important;
}
.iv-layout-footer a{
	color: #353054 !important;
}
.iv-layout-footer a:hover{
	color: #fff !important;
}
.ivan-message{
	margin-top: 10px !important;
}

.product-subtotal .amount{
	color:#000;
}
.btn-bg{
	background: #FF8402!important;
	color: #fff!important;
}
.ft-spacer{
  height:40px;
}

a:hover, a:focus {
	color: #FF8402;
}
.product-info a:hover, .product-info a:focus{
	color: #FF8402;
}
.cart-details-col{
	background: #F4F4F4;
	padding: 19px;
}

.group_table {
	width:auto !important;
}
.group_table tr{
	background:none !important;
}
.group_table tr .price{
padding-top: 30px!important;
text-align: center!important;
}
.group_table tr .amount{
display: block;
margin-bottom: -6%;
}
.group_table tr .price .in-stock{
color: #A5A4A4;
font-weight: 100!important;
}
.woocommerce div.product form.cart .group_table tr:nth-child(even), .woocommerce-page div.product form.cart .group_table tr:nth-child(even) {
border-top: 1px solid;
}
.ivan-title-inner h2{
	text-align: center;
border-top: 3px solid #7a7483;
border-bottom: 3px solid #7a7483;
text-transform: uppercase;
font-size: 17px !important;
display: table;
margin: auto !important;
padding: 10px;
line-height: 1.65;
color: #000;
font-weight: 600!important;
letter-spacing: 3px;
}
.ivan-breadcrumb {
top:41%;
}




.ivan-message .fa-close{
	cursor:pointer;
}



.pincode-btn{
text-align:center;
margin-top:10px;
}

.product-unavailable{
display:none;
margin-top:20px;
}



.check-preload{
display:none;
/*display: inline-block;*/
background: url(images/pinloader.gif) no-repeat center center;
width: 30px;
height: 30px;
}

.widget_shopping_cart_content .buttons .checkout{
	display:none;
}

.widget_shopping_cart_content .buttons{
text-align:center;
}

.product-avail-error{
	display:none;
	margin-top: 50px;
	text-align:center;
}

.product-avail-error a{
	cursor:pointer;
}

#change-pincode-list{
	cursor:pointer;
}

.pinchange-info{
 width: 80%;
 margin: auto;
 display: block;
 text-align: center;
 margin-top: 10px;
}
#pincode-chk-cancel{
	margin-left:10px;
}

.pincode-txt{
 width: 80%;
 margin: auto;
 display: block;
 text-align: center;
 margin-top: 10px;
 margin-bottom: 10px;
}

.signuplink{
	text-align:center;
	margin-top:10px;
}

.popstate{
	overflow:hidden;
}

.woof_products_top_panel {
  border-bottom: 1px solid #eee;
}
.woof_products_top_panel .woof_remove_ppi {
  background-image: none;
  padding-left: 1em;
}
.woof_products_top_panel .woof_remove_ppi:before,
.woof_products_top_panel .woof_remove_ppi:after {
  display: inline-block;
  font: normal normal normal 14px/1 FontAwesome;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}
.woof_products_top_panel .woof_remove_ppi:before {
  content: "\f02b";
  padding-right: 0.5em;
}
.woof_products_top_panel .woof_remove_ppi:after {
  content: "\f00d";
  color: #dc1c1c;
  padding-left: 0.5em;
}


.yith-ajaxsearchform-container form {
  position: relative;
}
.yith-ajaxsearchform-container form .yith-s {
  width: 85%;
  background-image: none !important;
  border-right: 0;
}
.yith-ajaxsearchform-container form #yith-searchsubmit {
  position: absolute;
  top: 0;
  right: 0;
  color: #fff;
  background-color: transparent;
  border-color: #463752;
  text-indent: -1000px;
  padding: 14px 25px;
  z-index: 1;
  outline: 0;
}
.yith-ajaxsearchform-container form > div:after {
  content: "\f002";
  color: #fff;
  position: absolute;
  right: 1.3em;
  top: 1.3em;
  cursor: pointer;
  box-shadow: #463752 -1px 2px 0 19px;
  background-color: #463752;
  display: inline-block;
  font: normal normal normal 14px/1 FontAwesome;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}


.woocommerce .quantity input.qty, .woocommerce-page .quantity input.qty {
    border-style: solid !important;
    border-width: 1px !important;
}


div.woof_info_popup{
	background-image: url('images/pinloader.gif');
    background-repeat: no-repeat;
    background-color: #fff;
    text-indent: -1000px;
    padding: 2em;
    background-position: center;
    width: 150px;
    opacity: 1 !important;
    border-radius: 0;
}

.woof_show_auto_form {
  display: none !important;
}

